--- a/sdk/package.json
+++ b/sdk/package.json
@@ -2,12 +2,16 @@
 	"dependencies": {
 		"@fuel-wallet/sdk": "^0.11.0",
 		"@fuel-wallet/types": "^0.11.0",
+		"ethers": "^6.7.1",
 		"fuels": "^0.53.0"
 	},
 	"devDependencies": {
+		"@fuels/ts-config": "^0.0.7",
+		"prettier": "^3.0.3",
 		"tsup": "^7.2.0"
 	},
 	"scripts": {
-		"build": "pnpm tsup --dts"
+		"build": "pnpm tsup --dts",
+		"fmt": "prettier --config .prettierrc 'src/*.ts' --write"
 	}
 }
