--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@ethersproject/bytes": "^5.7.0",
 		"@fuel-wallet/sdk": "^0.11.0",
 		"@fuel-wallet/types": "^0.11.0",
 		"ethers": "^6.7.1",
