--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,18 +1,26 @@
 {
 	"dependencies": {
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "^0.11.0",
-		"@fuel-wallet/types": "^0.11.0",
+		"@fuel-wallet/sdk": "^0.12.3",
+		"@fuel-wallet/types": "^0.12.3",
+		"@types/chrome": "^0.0.245",
+		"@types/react": "^18.2.21",
 		"ethers": "^6.7.1",
 		"fuels": "^0.53.0"
 	},
 	"devDependencies": {
 		"@fuels/ts-config": "^0.0.7",
+		"@types/chai": "^4.3.6",
+		"@types/mocha": "^10.0.1",
+		"chai": "^4.3.8",
+		"mocha": "^10.2.0",
 		"prettier": "^3.0.3",
-		"tsup": "^7.2.0"
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2"
 	},
 	"scripts": {
-		"build": "pnpm tsup --dts",
-		"fmt": "prettier --config .prettierrc 'src/*.ts' --write"
+		"build": "pnpm tsc",
+		"fmt": "prettier --config .prettierrc 'src/*.ts' --write",
+		"test": "mocha"
 	}
 }
