--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@ethersproject/bytes": "^5.7.0",
+		"@ethereumjs/util": "^9.0.0",
 		"@fuel-wallet/sdk": "^0.12.3",
 		"@fuel-wallet/types": "^0.12.3",
 		"@types/chrome": "^0.0.245",
