--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -6,6 +6,8 @@
         "module": "CommonJS",
         "strict": true,
         "noUncheckedIndexedAccess": true,
+        "declaration": true,
+        "resolveJsonModule": true,
         "skipLibCheck": true,
         "outDir": "./dist"
     }
