Add tautology-predicate for testing

--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -10,5 +10,8 @@
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "outDir": "./dist"
-    }
+    },
+    "exclude": [
+        "./dist/**/*"
+    ]
 }
