--- a/signature-predicate/Cargo.toml
+++ b/signature-predicate/Cargo.toml
@@ -10,7 +10,8 @@ license = "Apache-2.0"
 ethers = "2.0"
 ethers-core = "2.0"
 ethers-signers = "2.0"
-fuels = { version = "0.46", features = ["fuel-core-lib"] }
+# fuels = { version = "0.46", features = ["fuel-core-lib"] }
+fuels = { git = "https://github.com/FuelLabs/fuels-rs.git", branch = "master" }
 tokio = { version = "1.12", features = ["rt", "macros"] }
 fuel-tx = "0.35.3"
 
