--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,30 +65,30 @@ jobs:
 
       - name: Check Sway formatting
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           forc fmt --check
 
       - name: Check Rust formatting
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           cargo fmt --verbose --check
 
       - name: Build Sway
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           forc build --locked
 
       - name: Build Rust files
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           cargo build --locked
 
       - name: Check Clippy Linter
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           cargo clippy --all-features --all-targets -- -D warnings
 
       - name: Run Rust tests
         run: |
-          cd ${{ matrix.project }}/project
+          cd ${{ matrix.project }}
           cargo test --locked
