--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
       matrix:
         project:
           [
-            "signature-predicate",
-            "signature-script",
+            "metamask-predicate",
+            "metamask-script",
           ]
 
     steps:
