restructure .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-out
+# predicate
 target
+out
+*/*.lock
+
+# sdk
+node_modules
+cache
+pnpm-lock.yaml
+dist
+sdk/src/predicateResources.ts
+
+# tmp
+.github
