--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@dmihal/fuel-evm-wallet-connector",
+	"name": "@fuels/wallet-connector-evm",
 	"version": "0.0.2",
 	"main": "dist/src/index.js",
 	"files": [
@@ -13,15 +13,18 @@
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.0",
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "^0.12.3",
-		"@fuel-wallet/types": "^0.12.3",
-		"fuels": "^0.63.0",
+		"@fuel-wallet/sdk": "^0.13.5",
+		"@fuel-wallet/types": "^0.13.5",
+		"fuels": "^0.67.0",
 		"memoizee": "^0.4.15"
 	},
 	"devDependencies": {
-		"@fuel-ts/fuel-core": "^0.63.0",
-		"@fuel-ts/wallet": "^0.63.0",
-		"@fuels/ts-config": "^0.0.7",
+		"@fuel-ts/fuel-core": "^0.67.0",
+		"@fuel-ts/wallet": "^0.67.0",
+		"@fuels/ts-config": "^0.1.4",
+		"@fuel-ts/hasher": "^0.67.0",
+		"@fuel-ts/merkle": "^0.67.0",
+		"@fuel-ts/utils": "^0.67.0",
 		"@types/chai": "^4.3.6",
 		"@types/chai-as-promised": "^7.1.6",
 		"@types/memoizee": "^0.4.9",
@@ -33,7 +36,7 @@
 		"prettier": "^3.0.3",
 		"ts-loader": "^9.4.4",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.2.2",
+		"typescript": "~5.2.2",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4"
 	}
