Restructured dirs, removed tmp predicate, updated tests to new format

--- a/signature-verification/Cargo.toml
+++ b/signature-verification/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["metamask-predicate", "metamask-script"]
+members = ["verification-predicate", "verification-script"]
 resolver = "2"
 
 [workspace.package]
