--- a/signature-verification/verification-script/Cargo.toml
+++ b/signature-verification/verification-script/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "metamask-predicate"
+name = "verification-script"
 description = "A cargo-generate template for Rust + Sway integration testing."
 version = { workspace = true }
 edition = { workspace = true }
