--- a/sdk/package.json
+++ b/sdk/package.json
@@ -13,18 +13,18 @@
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.0",
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "^0.13.5",
-		"@fuel-wallet/types": "^0.13.5",
+		"@fuel-wallet/sdk": "0.14.0-preview-a651bbe",
+		"@fuel-wallet/types": "0.14.0-preview-a651bbe",
 		"fuels": "^0.67.0",
 		"memoizee": "^0.4.15"
 	},
 	"devDependencies": {
 		"@fuel-ts/fuel-core": "^0.67.0",
-		"@fuel-ts/wallet": "^0.67.0",
-		"@fuels/ts-config": "^0.1.4",
 		"@fuel-ts/hasher": "^0.67.0",
 		"@fuel-ts/merkle": "^0.67.0",
 		"@fuel-ts/utils": "^0.67.0",
+		"@fuel-ts/wallet": "^0.67.0",
+		"@fuels/ts-config": "^0.1.4",
 		"@types/chai": "^4.3.6",
 		"@types/chai-as-promised": "^7.1.6",
 		"@types/memoizee": "^0.4.9",
