--- a/cra-dapp/package.json
+++ b/cra-dapp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@fuel-wallet/react": "0.14.0-preview-a651bbe",
-    "@fuels/wallet-connector-evm": "link:../sdk",
+    "@fuels/wallet-connector-evm": "file:../sdk",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
