--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "extends": "@fuels/ts-config/base.json",
     "compilerOptions": {
-        "target": "ESNext",
-        "lib": ["DOM", "ESNext"],
-        "module": "CommonJS",
+        "target": "ES2022",
+        "lib": ["DOM", "ES2022"],
+        "module": "es2022",
+        "moduleResolution": "Node",
         "strict": true,
         "noUncheckedIndexedAccess": true,
         "declaration": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
     },
     "exclude": [
         "./dist/**/*"
