--- a/cra-dapp/package.json
+++ b/cra-dapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fuel-wallet/react": "0.14.0-preview-d4d57b4",
+    "@fuel-wallet/sdk": "0.14.0-preview-d4d57b4",
     "@fuels/wallet-connector-evm": "file:../sdk",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
