--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@fuel-wallet/react": "0.14.0-preview-d4d57b4",
     "@fuel-wallet/sdk": "0.14.0-preview-d4d57b4",
-    "@fuels/wallet-connector-evm": "file:../sdk",
+    "@fuels/wallet-connector-evm": "workspace:*",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
