--- a/examples/cra-dapp/tsconfig.json
+++ b/examples/cra-dapp/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "@fuels/wallet-connector-evm"],
+    "types": ["node"],
   },
   "include": ["src"]
 }
