refact: add readme and refactor code

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "license": "Apache-2.0",
     "scripts": {
         "build:forc": "pnpm forc build --path ./packages/signature-verification",
-        "build:connector": "turbo run build",
-        "build": "run-s build:forc build:connector"
+        "build:all": "run-s build:forc build:connector",
+        "build:connector": "pnpm run build --filter=wallet-connector-evm",
+        "build": "turbo run build"
     },
     "devDependencies": {
         "turbo": "^1.11.2",
