--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -15,15 +15,16 @@
 	},
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsx generatePredicateResources.ts && tsc && vite build",
+		"build:resources": "tsx generatePredicateResources.ts",
+		"build": "tsc && vite build",
 		"fmt": "prettier --config .prettierrc 'src/*.ts' 'test/*.ts' --write",
 		"test": "tsx generatePredicateResources.ts && mocha --require ts-node/register  test/*.test.ts"
 	},
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "0.14.0-preview-d4d57b4",
-		"@fuel-wallet/types": "0.14.0-preview-d4d57b4",
+		"@fuel-wallet/sdk": "0.14.0-preview-ce33146",
+		"@fuel-wallet/types": "0.14.0-preview-ce33146",
 		"fuels": "^0.67.0",
 		"json-rpc-2.0": "^1.7.0",
 		"memoizee": "^0.4.15"
