--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,11 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "globalDependencies": [".env", ".env.production", ".env.test"],
-    "globalEnv": ["NODE_ENV"],
-    "pipeline": {
-      "build": {
-        "outputs": ["dist/**"]
-      }
+  "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": [".env", ".env.production", ".env.test"],
+  "globalEnv": ["NODE_ENV"],
+  "pipeline": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
     }
   }
-  
+}
