Updated predicate ID calculation to support beta-5

--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "crypto-browserify": "^3.12.0",
-    "fuels": "^0.67.0",
+    "fuels": "0.0.0-rc-salamander-20240117171623",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
