--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -23,18 +23,16 @@
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "0.14.0-preview-ce33146",
-		"@fuel-wallet/types": "0.14.0-preview-ce33146",
-		"fuels": "0.0.0-rc-salamander-20240117171623",
+		"@fuel-wallet/sdk": "0.15.2",
+,
+		"@fuel-wallet/types": "0.15.2",
+,
+		"fuels": "0.73.0",
+,
 		"json-rpc-2.0": "^1.7.0",
 		"memoizee": "^0.4.15"
 	},
 	"devDependencies": {
-		"@fuel-ts/fuel-core": "0.0.0-rc-salamander-20240117171623",
-		"@fuel-ts/hasher": "0.0.0-rc-salamander-20240117171623",
-		"@fuel-ts/merkle": "0.0.0-rc-salamander-20240117171623",
-		"@fuel-ts/utils": "0.0.0-rc-salamander-20240117171623",
-		"@fuel-ts/wallet": "0.0.0-rc-salamander-20240117171623",
 		"@fuels/ts-config": "^0.1.4",
 		"@types/chai": "^4.3.11",
 		"@types/chai-as-promised": "^7.1.8",
