--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -24,11 +24,9 @@
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
 		"@fuel-wallet/sdk": "0.15.2",
-,
 		"@fuel-wallet/types": "0.15.2",
-,
 		"fuels": "0.73.0",
-,
+		"@fuel-ts/wallet": "0.73.0",
 		"json-rpc-2.0": "^1.7.0",
 		"memoizee": "^0.4.15"
 	},
