--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fmt": "prettier --config .prettierrc 'src/*.ts' 'src/*.tsx' --write"
   },
   "browserslist": {
     "production": [
