--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fuel-wallet/react": "0.14.0-preview-ce33146",
-    "@fuel-wallet/sdk": "0.14.0-preview-ce33146",
+    "@fuel-wallet/react": "0.15.2",
+    "@fuel-wallet/sdk": "0.15.2",
     "@fuels/wallet-connector-evm": "workspace:*",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "crypto-browserify": "^3.12.0",
-    "fuels": "^0.67.0",
+    "fuels": "0.74.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +20,8 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fmt": "prettier --config .prettierrc 'src/*.ts' 'src/*.tsx' --write"
   },
   "browserslist": {
     "production": [
