--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -16,25 +16,21 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build:resources": "tsx generatePredicateResources.ts",
-		"build": "tsc && vite build",
+		"build": "run-s build:resources && tsc && vite build",
 		"fmt": "prettier --config .prettierrc 'src/*.ts' 'test/*.ts' --write",
-		"test": "tsx generatePredicateResources.ts && mocha --require ts-node/register  test/*.test.ts"
+		"test": "run-s build:resources && mocha --require ts-node/register  test/*.test.ts"
 	},
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
-		"@fuel-wallet/sdk": "0.14.0-preview-ce33146",
-		"@fuel-wallet/types": "0.14.0-preview-ce33146",
-		"fuels": "^0.67.0",
+		"@fuel-wallet/sdk": "0.15.2",
+		"@fuel-wallet/types": "0.15.2",
+		"fuels": "0.74.0",
+		"@fuel-ts/account": "0.74.0",
 		"json-rpc-2.0": "^1.7.0",
 		"memoizee": "^0.4.15"
 	},
 	"devDependencies": {
-		"@fuel-ts/fuel-core": "^0.67.0",
-		"@fuel-ts/hasher": "^0.67.0",
-		"@fuel-ts/merkle": "^0.67.0",
-		"@fuel-ts/utils": "^0.67.0",
-		"@fuel-ts/wallet": "^0.67.0",
 		"@fuels/ts-config": "^0.1.4",
 		"@types/chai": "^4.3.11",
 		"@types/chai-as-promised": "^7.1.8",
