--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -18,28 +18,22 @@
 		"build:resources": "tsx generatePredicateResources.ts",
 		"build": "run-s build:resources && tsc && vite build",
 		"fmt": "prettier --config .prettierrc 'src/*.ts' 'test/*.ts' --write",
-		"test": "run-s build:resources && mocha --require ts-node/register test/*.test.ts"
+		"test": "run-s build:resources && vitest"
 	},
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
+		"@fuel-ts/account": "0.74.0",
 		"@fuel-wallet/sdk": "0.15.2",
 		"@fuel-wallet/types": "0.15.2",
 		"fuels": "0.74.0",
-		"@fuel-ts/account": "0.74.0",
 		"json-rpc-2.0": "^1.7.0",
 		"memoizee": "^0.4.15"
 	},
 	"devDependencies": {
 		"@fuels/ts-config": "^0.1.4",
-		"@types/chai": "^4.3.11",
-		"@types/chai-as-promised": "^7.1.8",
 		"@types/memoizee": "^0.4.11",
-		"@types/mocha": "^10.0.6",
 		"@types/node": "^20.10.5",
-		"chai": "^4.3.10",
-		"chai-as-promised": "^7.1.1",
-		"mocha": "^10.2.0",
 		"prettier": "^3.1.1",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
@@ -47,6 +41,7 @@
 		"typescript": "~5.2.2",
 		"vite": "^5.0.10",
 		"vite-plugin-dts": "^3.6.4",
+		"vitest": "^1.4.0",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4"
 	}
