--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "@fuels/wallet-connector-evm",
 	"version": "0.0.2",
-	"type": "module",
 	"files": [
 		"dist"
 	],
@@ -18,7 +17,7 @@
 		"build:resources": "tsx generatePredicateResources.ts",
 		"build": "run-s build:resources && tsc && vite build",
 		"fmt": "prettier --config .prettierrc 'src/*.ts' 'test/*.ts' --write",
-		"test": "run-s build:resources && vitest"
+		"test": "run-s build:resources && vitest --run"
 	},
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
