--- a/packages/wallet-connector-evm/package.json
+++ b/packages/wallet-connector-evm/package.json
@@ -17,12 +17,13 @@
 		"build:resources": "tsx generatePredicateResources.ts",
 		"build": "run-s build:resources && tsc && vite build",
 		"fmt": "prettier --config .prettierrc 'src/*.ts' 'test/*.ts' --write",
-		"test": "run-s build:resources && vitest --run"
+		"test": "run-s build:resources && vitest --disable-console-intercept --run"
 	},
 	"dependencies": {
 		"@ethereumjs/util": "^9.0.1",
 		"@ethersproject/bytes": "^5.7.0",
 		"@fuel-ts/account": "0.74.0",
+		"@fuel-ts/fuel-core": "^0.74.0",
 		"@fuel-wallet/sdk": "0.15.2",
 		"@fuel-wallet/types": "0.15.2",
 		"fuels": "0.74.0",
