Example: bump fuels and fuel-wallet

--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fuel-wallet/react": "0.15.2",
-    "@fuel-wallet/sdk": "0.15.2",
+    "@fuel-wallet/react": "^0.16.1",
+    "@fuel-wallet/sdk": "^0.16.1",
     "@fuels/wallet-connector-evm": "workspace:*",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "crypto-browserify": "^3.12.0",
-    "fuels": "0.74.0",
+    "fuels": "^0.77.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
