--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "0.5.12",
+    "tailwindcss": "3.4.1"
   }
 }
