--- a/examples/cra-dapp/package.json
+++ b/examples/cra-dapp/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "clsx": "2.1.0",
     "crypto-browserify": "^3.12.0",
     "fuels": "0.74.0",
     "react": "^18.2.0",
